# 2020-Advent-of-Code

./: again_in_zig.zig
day1/: Cargo.toml
day1/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
solutions_rust/: Cargo.toml
solutions_rust/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  lib.rs
