[package]
name = "solutions_rust"
version = "0.1.0"
authors = ["Nick Dolan <nicholas.dolan1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1"
lazy_static = "1.4"
aoc-runner = "0.3"
aoc-runner-derive = "0.3"
